--- a/style.css
+++ b/style.css
@@ -1,25 +1,29 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
-body, html{
+
+body, html {
     color: #ededed;
     height: 100%;
     background: #081b29;
 }
+
 .header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background:#051129;
+    background: #051129;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
 }
+
 .logo {
     position: relative;
     font-size: 25px;
@@ -31,6 +35,7 @@ body, html{
     animation: slideRight 1s ease forwards;
 
 }
+
 .navbar a {
     display: inline-block;
     font-size: 25px;
@@ -43,9 +48,11 @@ body, html{
     animation: slideTop .5s ease forwards;
     animation-delay: calc(-2s * var(--i));
 }
+
 .navbar a:hover {
     color: #0ef;
 }
+
 .home {
     position: relative;
     justify-content: space-between;
@@ -58,6 +65,7 @@ body, html{
     align-items: center;
     padding: 70px 10% 0;
 }
+
 .my {
     float: right;
     border-radius: 50%;
@@ -67,26 +75,31 @@ body, html{
     /* max-width: 100%; */
     height: auto;
 }
+
 .home-content {
     max-width: 600px;
 
 }
-.home-content h3{
+
+.home-content h3 {
     font-size: 32px;
     font-weight: 700;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
     animation-delay: .7s;
 }
+
 .home-content h3 span {
     color: #0ef;
 }
+
 .home-content h3:nth-of-type(2) {
     margin-bottom: 25px;
     margin-top: 5px;
     animation: slideTop 1s ease forwards;
     animation-delay: .7s;
 }
+
 .home-content h1 {
     font-size: 56px;
     font-weight: 700;
@@ -95,6 +108,7 @@ body, html{
     animation: slideRight 1s ease forwards;
     animation-delay: 1.3s;
 }
+
 .home-content p {
     font-size: 21px;
     opacity: 0;
@@ -102,6 +116,7 @@ body, html{
     animation-delay: 1.3s;
 
 }
+
 .home-sci a {
     display: inline-flex;
     justify-content: center;
@@ -119,13 +134,15 @@ body, html{
     animation: slideLeft 1s ease forwards;
     animation-delay: calc(.2s * var(--i));
     margin: 30px 15px 30px 0;
-    
+
 }
+
 .home-sci a:hover {
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
 }
+
 .btn-box {
     display: inline-block;
     padding: 12px 28px;
@@ -140,14 +157,15 @@ body, html{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-    0 0 25px #0ef;
+        0 0 25px #0ef;
 }
+
 .btn-box:hover {
     background: transparent;
     color: #fff;
-    box-shadow: 0 0 5px cyan, 
-    0 0 25px cyan, 0 0 50px cyan, 
-    0 0 100px cyan, 0 0 200px cyan;
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
 }
 
 .about {
@@ -158,30 +176,35 @@ body, html{
     gap: 2rem;
     padding-bottom: 6rem; */
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
 }
+
 .about-img img {
     padding-bottom: 10%;
     max-width: 550px;
     height: auto;
     width: 100%;
-    border-radius:35%;
+    border-radius: 35%;
     margin-left: 15px;
 
 }
+
 .about-text {
     margin-top: 20px;
     margin-right: 30px;
-    justify-content:center
+    justify-content: center
 }
+
 .about-text h1 {
     font-size: 60px;
 }
+
 .about-text h1 span {
     color: #0ef;
 }
+
 .about-text h4 {
     font-size: 29px;
     font-weight: 600;
@@ -189,36 +212,43 @@ body, html{
     line-height: 1.7;
     margin: 15px 0 25px;
 }
+
 .about-text p {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.5;
     margin-bottom: 1.5rem;
-    
+
 }
+
 #services {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
 }
+
 .sub-title {
     text-align: center;
     font-size: 60px;
     padding-bottom: 30px;
 }
-.sub-title span{
+
+.sub-title span {
     color: #0ef;
 }
+
 .container {
     padding: 90px;
 }
+
 .services-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
+
 .services-list div {
     background-color: transparent;
     padding: 40px;
@@ -228,17 +258,20 @@ body, html{
     border-radius: 20px;
     transition: background 0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #012290f7,
-                1px 1px 40px #0053b8f7
+        1px 1px 40px #0053b8f7
 }
+
 .services-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 }
+
 .services-list div h2 {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
+
 .services-list div a {
     text-decoration: none;
     font-size: 12px;
@@ -246,7 +279,8 @@ body, html{
     color: #000000;
     display: inline-block;
 }
-.read{
+
+.read {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -260,38 +294,42 @@ body, html{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-    0 0 25px #0ef;
+        0 0 25px #0ef;
 }
-.read:hover{
+
+.read:hover {
     background: transparent;
     color: #fff;
-    box-shadow: 0 0 5px cyan, 
-    0 0 25px cyan, 0 0 50px cyan, 
-    0 0 100px cyan, 0 0 200px cyan;
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
 }
-.services-list div:hover{
+
+.services-list div:hover {
     transform: translateY(-10px);
 }
 
-.skills{
+.skills {
     display: flex;
     flex-wrap: wrap;
 }
 
-.container1{
+.container1 {
     width: 600px;
     height: 500px;
     padding: 75px 90px;
     margin-left: 120px;
 }
-.heading1{
+
+.heading1 {
     text-align: center;
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
     margin-bottom: 50px;
-    
+
 }
+
 /* .bar{
     font-size: 23px;
 } */
@@ -327,11 +365,12 @@ body, html{
 
 
 
-@keyframes animate{
-    100%{
+@keyframes animate {
+    100% {
         transform: scaleX(1);
     }
 }
+
 /* .Technical-bars .bar .progress-line span{
     height: 100%;
     background-color: #0ef;
@@ -507,10 +546,11 @@ body, html{
     border-radius: 1em;
     padding: 1em;
 } */
-.technical{
+.technical {
     align-items: center;
 }
-ul{
+
+ul {
     font-family: 'Gill Sans', 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
     list-style: none;
     width: 500px;
@@ -519,12 +559,14 @@ ul{
     color: #fff;
     padding: 20px;
     box-shadow: 0 14px 28px rgb(0, 0, 0, 0.25), 0 10px 10px rgb(0, 0, 0, 0.22);
-    
+
 }
-ul li{
+
+ul li {
     padding: 10px;
 }
-.bar{
+
+.bar {
     background: #353b48;
     display: block;
     height: 20px;
@@ -532,91 +574,111 @@ ul li{
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 1px 3px rgb(0, 0, 0, 0.12), 0 1px 2px rgb(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
-.bar:hover{
+
+.bar:hover {
     box-shadow: 0 14px 28px rgb(0, 0, 0, 0.25), 0 10px 10px rgb(0, 0, 0, 0.22);
 }
-.bar span{
+
+.bar span {
     height: 20px;
     float: left;
-    background: linear-gradient(135deg, rgb(236,0,140,1)0%, rgb(252, 103,103, 1)100%);
+    background: linear-gradient(135deg, rgb(236, 0, 140, 1)0%, rgb(252, 103, 103, 1)100%);
 }
-.html{
+
+.html {
     width: 90%;
     animation: html 3s;
 }
-.css{
+
+.css {
     width: 85%;
     animation: css 3s;
 }
-.javascript{
+
+.javascript {
     width: 80%;
     animation: javascript 3s;
 }
-.python{
+
+.python {
     width: 50%;
     animation: python 3s;
 }
-.react{
+
+.react {
     width: 70%;
     animation: react 3s;
 }
-.flutter{
+
+.flutter {
     width: 75%;
     animation: flutter 3s;
 }
 
-@keyframes html{
-    0%{
+@keyframes html {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
         width: 90%;
     }
 }
-@keyframes css{
-    0%{
+
+@keyframes css {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
         width: 90%;
     }
 }
-@keyframes javascript{
-    0%{
+
+@keyframes javascript {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
         width: 90%;
     }
 }
-@keyframes python{
-    0%{
+
+@keyframes python {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
         width: 90%;
     }
 }
-@keyframes react{
-    0%{
+
+@keyframes react {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
         width: 90%;
     }
 }
-@keyframes flutter{
-    0%{
+
+@keyframes flutter {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
         width: 90%;
     }
 }
+
 /* Professional Skills start */
-.container2{
+.container2 {
     position: relative;
     display: flex;
     justify-content: center;
@@ -624,7 +686,8 @@ ul li{
     flex-wrap: wrap;
     gap: 40px;
 }
-.container2 .card{
+
+.container2 .card {
     position: relative;
     width: 220px;
     height: 250px;
@@ -634,18 +697,21 @@ ul li{
     align-items: center;
     border-radius: 20px;
 }
-.container2 .card .percent{
+
+.container2 .card .percent {
     position: relative;
     width: 150px;
     height: 150px;
 }
-.container2 .card .percent svg{
+
+.container2 .card .percent svg {
     position: relative;
     width: 150px;
     transform: rotate(270deg);
     height: 150px;
 }
-.container2 .card .percent svg circle{
+
+.container2 .card .percent svg circle {
     width: 100%;
     height: 100%;
     fill: transparent;
@@ -653,38 +719,45 @@ ul li{
     stroke: #191919;
     transform: translate(5px, 5px);
 }
-.container2 .card .percent svg circle:nth-child(2){
+
+.container2 .card .percent svg circle:nth-child(2) {
     stroke: var(--clr);
     stroke-dasharray: 440;
     stroke-dashoffset: calc(440 - (440 * var(--num)) / 100);
     opacity: 0;
     animation: fadeIn 1s linear forwards;
-    animation-delay:2.5s;
+    animation-delay: 2.5s;
 }
-@keyframes fadeIn{
-    0%{
+
+@keyframes fadeIn {
+    0% {
         opacity: 0;
     }
-    100%{
+
+    100% {
         opacity: 1;
     }
 }
-.dot{
+
+.dot {
     position: absolute;
     inset: 5px;
     z-index: 10;
     transform: rotate(calc(3.6deg * var(--num)));
     animation: animateDot 2s linear forwards;
 }
-@keyframes animateDot{
-    0%{
+
+@keyframes animateDot {
+    0% {
         transform: rotate(0deg);
     }
-    100%{
+
+    100% {
         transform: rotate(calc(3.6deg * var(--num)));
     }
 }
-.dot::before{
+
+.dot::before {
     content: '';
     position: absolute;
     top: -5px;
@@ -695,10 +768,10 @@ ul li{
     background: var(--clr);
     border-radius: 50%;
 
-    box-shadow: 0 0 10px var(--clr)
-    0 0 30px var(--clr);
+    box-shadow: 0 0 10px var(--clr) 0 0 30px var(--clr);
 }
-.number{
+
+.number {
     position: absolute;
     inset: 0;
     display: flex;
@@ -708,9 +781,10 @@ ul li{
 
     opacity: 0;
     animation: fadeIn 1s linear forwards;
-    animation-delay:2.5s;
+    animation-delay: 2.5s;
 }
-.number h2{
+
+.number h2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -718,12 +792,14 @@ ul li{
     font-weight: 700;
     font-size: 2.5rem;
 }
-.number h2 span{
+
+.number h2 span {
     font-size: 300;
     color: #fff;
     font-size: .5em;
 }
-.number p{
+
+.number p {
     font-weight: 300;
     font-size: 0.75em;
     line-height: 2px;
@@ -732,42 +808,49 @@ ul li{
     color: rgb(255, 255, 255, 0.75);
     text-transform: uppercase;
 }
+
 /* Professional Skills end */
 
 
 /* Portfolio Start */
-.main-text{
+.main-text {
     padding-top: 100px;
     margin-top: 2px;
 }
-.main-text h2{
+
+.main-text h2 {
     font-size: 60px;
     line-height: 1;
     text-align: center;
 }
-.main-text h2 span{
+
+.main-text h2 span {
     color: #0ef;
 }
-.portfolio-content{
+
+.portfolio-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(359px, auto));
 }
-.row{
+
+.row {
     position: relative;
     overflow: hidden;
     border-radius: 8px;
     cursor: pointer;
 }
-.row img{
+
+.row img {
     width: 100%;
     border-radius: 8px;
     display: block;
     transition: transform 0.5s;
 }
-.layer{
+
+.layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgb(0,0,0,0.1), #0ef);
+    background: linear-gradient(rgb(0, 0, 0, 0.1), #0ef);
     position: absolute;
     border-radius: 8px;
     left: 0;
@@ -781,18 +864,21 @@ ul li{
     padding: 0 40px;
     transition: height 0.5s;
 }
-.layer h5{
+
+.layer h5 {
     font-size: 15px;
     color: #fff;
     font-weight: 600;
     margin-bottom: 10px;
 }
-.layer p{
+
+.layer p {
     color: #fff;
     font-size: 1rem;
     line-height: 1.2;
 }
-.layer i{
+
+.layer i {
     color: #ff004f;
     margin-top: 10px;
     font-size: 10px;
@@ -804,62 +890,74 @@ ul li{
     justify-content: center;
     border-radius: 50%;
 }
-.row:hover img{
+
+.row:hover img {
     transform: scale(1.1);
 }
-.row:hover .layer{
+
+.row:hover .layer {
     height: 100%;
 }
+
 /* Portfolio End */
 
 /* Contact Section Start */
-.contact{
+.contact {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 3rem;
     padding-left: 30px;
     margin-top: 90px;
 }
-.contact-text h2{
+
+.contact-text h2 {
     font-size: 90px;
     line-height: 1;
     text-align: center;
 }
-.contact-text h2 span{
+
+.contact-text h2 span {
     color: #0ef;
 }
-.contact-text h4{
+
+.contact-text h4 {
     margin: 15px 0;
     font-size: 20px;
     font-weight: 600;
     color: rgb(228, 228, 228);
 }
-.contact-text p{
+
+.contact-text p {
     color: rgb(177, 177, 177);
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 2rem;
 }
-.contact-list{
+
+.contact-list {
     margin-bottom: 3rem;
 }
-.contact-list li{
+
+.contact-list li {
     margin-bottom: 10px;
     display: block;
 }
-.contact-list i{
+
+.contact-list i {
     display: inline-block;
     font-size: 20px;
     color: #0ef;
     font-weight: 600;
     transition: all .40s ease;
 }
-.contact-list li:hover{
+
+.contact-list li:hover {
     transform: scale(1.01) translateY(-5px);
     color: #0ef;
 }
-.contact-icons i{
+
+.contact-icons i {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -877,15 +975,18 @@ ul li{
     animation: slideLeft 1s ease forwards;
     animation-delay: calc(.2s * var(--i));
 }
-.contact-icons i:hover{
+
+.contact-icons i:hover {
     background: #0ef;
     color: #000;
     box-shadow: 0 0 20px #0ef;
 }
-.contact-form form{
+
+.contact-form form {
     position: relative;
 }
-.contact-form form input, form textarea{
+
+.contact-form form input, form textarea {
     border: none;
     outline: none;
     width: 90%;
@@ -897,11 +998,13 @@ ul li{
     margin-bottom: 0.5rem;
     border-radius: 0.5rem;
 }
-.contact-form textarea{
+
+.contact-form textarea {
     resize: none;
     height: 220px;
 }
-.contact-form form .send{
+
+.contact-form form .send {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -915,16 +1018,18 @@ ul li{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-    0 0 25px #0ef;
+        0 0 25px #0ef;
 }
-.contact-form form .send:hover{
+
+.contact-form form .send:hover {
     background: transparent;
     color: #fff;
-    box-shadow: 0 0 5px cyan, 
-    0 0 25px cyan, 0 0 50px cyan, 
-    0 0 100px cyan, 0 0 200px cyan;
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
 }
-.last-text p{
+
+.last-text p {
     width: 100%;
     text-align: center;
     padding: 25px 0;
@@ -932,19 +1037,22 @@ ul li{
     font-weight: 300;
     margin-top: 70px;
 }
-.top{
+
+.top {
     position: fixed;
     bottom: 2.1rem;
     right: 2.1rem;
 }
-.top i{
+
+.top i {
     color: #000;
     background: #0ef;
     font-size: 20px;
     padding: 10px;
     border-radius: 0.5rem;
-    scroll-behavior: smooth;
+
 }
+
 /* Contact Section Start */
 
 
@@ -957,6 +1065,7 @@ ul li{
         transform: translateX(-100px);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0px);
         opacity: 1;
@@ -968,6 +1077,7 @@ ul li{
         transform: translateX(100px);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0px);
         opacity: 1;
@@ -979,16 +1089,19 @@ ul li{
         transform: translateY(100px);
         opacity: 0;
     }
+
     100% {
         transform: translateY(0px);
         opacity: 1;
     }
 }
+
 @keyframes slideBottom {
     0% {
         transform: translateY(-100px);
         opacity: 0;
     }
+
     100% {
         transform: translateY(0px);
         opacity: 1;
